--- a/src/components/Login/style.scss
+++ b/src/components/Login/style.scss
@@ -2,4 +2,12 @@
     max-width: 250em;
     padding:1em;
     margin: 2em;
+    position: relative;
+    bottom:5em;
+  
+}
+.overlay{
+      position: relative;
+      left:45%;
+      bottom: 20em; 
 }
