--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@
   width: 100% !important;
   @include mixin-background-color('color-grey-2');
   .LayoutContainer {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     .PageContainer {
