--- a/src/components/Navigation/style.scss
+++ b/src/components/Navigation/style.scss
@@ -1,5 +1,8 @@
-.navigation{
+.nav{
     width: 100% !important;
-    padding: 0;
+    padding: 2em;
     margin:0;
+    color: white !important;
+    @include mixin-background-color('color-primary');
+    
 }
