--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,7 @@ body {
     @include mixin-background-color('dxp','color-grey-2');
     .nav{
       width: 100% !important;
+      height:3em;
       padding: 2em;
       margin:0 !important;
       @include mixin-background-color('dxp','color-grey-4');
@@ -50,9 +51,10 @@ body {
         @include mixin-background-color('vv','color-grey-2');
         .nav{
           width: 100% !important;
+          height:8em;
           padding: 2em;
           margin:0 !important;
-          @include mixin-background-color('vv','color-grey-4');
+          @include mixin-background-color('vv','color-grey-3');
         }
         .side-menu{
             @include mixin-background-color('vv','color-grey-4');
@@ -91,7 +93,7 @@ body {
       width: 100% !important;
       padding: 2em;
       margin:0 !important;
-      @include mixin-background-color('dxp','color-grey-4');
+      @include mixin-background-color('dxp','color-grey-2');
     }
     .side-menu{
     @include mixin-background-color('ncl','color-grey-4');
