--- a/src/styles/abstract/_mixins.scss
+++ b/src/styles/abstract/_mixins.scss
@@ -1,4 +1,3 @@
-
 @mixin font(
   $size: null,
   $name: $font-family-base,
@@ -34,22 +33,22 @@
 }
 
 @mixin mixin-font-family($key) {
-  font-family: theme-font-family($theme, $key);
+  font-family: theme-font-family('dxp-light', $key);
   .dxp-light & {
-    font-family: theme-font-family($theme, $key);
+    font-family: theme-font-family('dxp-light', $key);
   }
   .vv-light & {
-    font-family: theme-font-family($theme, $key);
+    font-family: theme-font-family('dxp-light', $key);
   }
   .ncl-light & {
-    font-family: theme-font-family($theme, $key);
+    font-family: theme-font-family('dxp-light', $key);
   }
 }
 
 @mixin mixin-font-size($key) {
-  font-size: theme-font-size($theme, $key);
+  font-size: theme-font-size('dxp-light', $key);
   .dxp-light & {
-    font-size: theme-font-size($theme, $key);
+    font-size: theme-font-size('dxp-light', $key);
   }
   .vv-light & {
     font-size: theme-font-size('vv-light', $key);
@@ -60,34 +59,87 @@
 }
 
 @mixin mixin-font-weight($key) {
-  font-weight: theme-font-weight($theme, $key);
- 
+  font-weight: theme-font-weight('dxp-light', $key);
+  .dxp-light & {
+    font-weight: theme-font-weight('dxp-light', $key);
+  }
+  .vv-light & {
+    font-weight: theme-font-weight('vv-light', $key);
+  }
+  .ncl-light & {
+    font-weight: theme-font-weight('ncl-light', $key);
+  }
 }
 
 @mixin mixin-color($key) {
-  color: theme-color($theme, $key);
- 
+  color: theme-color('dxp-light', $key);
+  .dxp-light & {
+    color: theme-color('dxp-light', $key);
+  }
+  .vv-light & {
+    color: theme-color('vv-light', $key);
+  }
+  .ncl-light & {
+    color: theme-color('ncl-light', $key);
+  }
 }
 
 @mixin mixin-background-color($key) {
-  background-color: theme-background-color($theme, $key);
- 
+  background-color: theme-background-color('dxp-light', $key);
+  .dxp-light & {
+    background-color: theme-background-color('dxp-light', $key);
+  }
+  .vv-light & {
+    background-color: theme-background-color('vv-light', $key);
+  }
+  .ncl-light & {
+    background-color: theme-background-color('ncl-light', $key);
+  }
 }
-
 
 @mixin mixin-border($style: solid, $color: 'color-primary', $top: 1px, $right: 1px, $down: 1px, $left: 1px) {
   border-width: $top $right $down $left;
   border-style: $style;
-  border-color: theme-color($theme, $color);
- 
+  border-color: theme-color('dxp-light', $color);
+  .dxp-light & {
+    border-width: $top $right $down $left;
+    border-style: $style;
+    border-color: theme-color('dxp-light', $color);
+  }
+  .vv-light & {
+    border-width: $top $right $down $left;
+    border-style: $style;
+    border-color: theme-color('vv-light', $color);
+  }
+  .ncl-light & {
+    border-width: $top $right $down $left;
+    border-style: $style;
+    border-color: theme-color('ncl-light', $color);
+  }
 }
 
-@mixin mixin-border($color:'color-primary') {
-  border: 2px solid theme-color($theme, $color) !important;
- 
+@mixin mixin-border-bottom-color($color: 'color-grey-1') {
+  border-bottom-color: theme-color('dxp-light', $color) !important;
+  .dxp-light & {
+    border-bottom-color: theme-color('dxp-light', $color) !important;
+  }
+  .vv-light & {
+    border-bottom-color: theme-color('dxp-light', $color) !important;
+  }
+  .ncl-light & {
+    border-bottom-color: theme-color('dxp-light', $color) !important;
+  }
 }
 
 @mixin mixin-box-shadow($top, $right, $down, $left, $color-r: 0, $color-g: 0, $color-b: 0, $color-a: 0.5) {
   box-shadow: $top $right $down $left rgba($color-r, $color-g, $color-b, $color-a);
-  
+  .dxp-light & {
+    box-shadow: $top $right $down $left rgba($color-r, $color-g, $color-b, $color-a);
+  }
+  .vv-light & {
+    box-shadow: $top $right $down $left rgba($color-r, $color-g, $color-b, $color-a);
+  }
+  .ncl-light & {
+    box-shadow: $top $right $down $left rgba($color-r, $color-g, $color-b, $color-a);
+  }
 }
