--- a/src/index.scss
+++ b/src/index.scss
@@ -6,160 +6,143 @@ body {
   "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
   sans-serif;
 
-  .dxp{
-  .dark{
-    background: black !important;
-  }
-  .light{
-    background: grey!important;
-  }
-}
-.vv{
-  .dark{
-    background-color: black !important;
-  }
-  .light{
-    background-color: grey!important;
-  }
-}
-.ncl{
-  .dark{
-    background: black !important;
-  }
-  .light{
-    background: grey!important;
-  }
-}
   }
   .side-menu{
     padding-left: 2em;
     height: 100%;
 }
+
+.switch{
+
+
+  input[type=checkbox]{
+    height: 0;
+    width: 0;
+    visibility: hidden;
+  }
+  
+  label {
+    cursor: pointer;
+    text-indent: -9999px;
+    width: 100px;
+    height: 28px;
+    background: grey;
+    display: block;
+    border-radius: 100px;
+    position: relative;
+  }
+  
+  label:after {
+    content: '';
+    position: absolute;
+    top: 3px;
+    left: 10px;
+    width: 20px;
+    height: 20px;
+    background: #fff;
+    border-radius: 8px;
+    transition: 0.5s;
+  }
+  
+  input:checked + label {
+    @include primary-color('vv');
+  }
+  
+  input:checked + label:after {
+    left: calc(100% - .5em);
+    transform: translateX(-100%);
+  }
+  
+  label:active:after {
+      width: 15px;
+      height: 15px;
+      border: 1px solid $black;
+  }
+  }
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  width: 2em; /* Set a specific slider handle width */
+  height:2em; /* Slider handle height */
+}
+ 
+  .slider::-moz-range-thumb {
+    width: 2em; /* Set a specific slider handle width */
+    height: 2em; /* Slider handle height */
+    @include mixin-background-color('dxp','color-grey-2');
+    border-radius: 50%;
+    cursor: pointer; /* Cursor on hover */
+  }
+ 
+  .slider:hover {
+    opacity: 1; /* Fully shown on mouse-over */
+  }
+  
+
+/*Apply styling that will override basic appearance*/
+/*nb this example is Chrome only*/
+input[type=range] {
+  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+  background: transparent; /* Otherwise white in Chrome */
+}
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+input[type=range]:focus {
+  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+}
+/*Styling the thumb in Chrome*/
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 1px solid #000000;
+  height: 2em;
+  width: 2em;
+  margin:-1em;
+  border-radius: 12px;
+  @include mixin-background-color('dxp','color-grey-4');
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; /* Add cool effects to your sliders! */
+}
+/*Styling the track in Chrome*/
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: .2em;
+  cursor: pointer;
+  background:$black;
+
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background:rgb(34, 32, 32);
+}
+
 .tile {
   &.is-parent{
-      @include mixin-font-weight('dxp','font-size-12');
       min-width: 10em !important;
       max-width: 24em;
       min-height: 10em;
+      &.is-parent{
+        background-color: transparent;
+      }
   }
 
 }
-  .dxp{
-    .dark{
-      @include mixin-background-color('dxp','color-grey-4');
-      @include mixin-color('dxp','color-white');
-      p{
-        @include mixin-background-color('dxp','color-grey-4');
-        @include mixin-color('dxp','color-white');
-      }
-      h1{
-        @include mixin-background-color('dxp','color-grey-4');
-        @include mixin-color('dxp','color-white');
-      }
-      h2{
-        @include mixin-background-color('dxp','color-grey-4');
-        @include mixin-color('dxp','color-white');
-      }
-      h3{
-        @include mixin-background-color('dxp','color-grey-4');
-        @include mixin-color('dxp','color-white');
-      }
-      .login{
-        @include mixin-background-color('dxp','color-grey-4');
-        @include mixin-color('dxp','color-white');
-      }
-      .dashboard{
-        @include mixin-background-color('dxp','color-grey-4');
-        @include mixin-color('dxp','color-white');
-      }
-      span{
-        @include mixin-background-color('dxp','color-grey-4');
-        @include mixin-color('dxp','color-white');
-      }
-      a{
-        @include mixin-background-color('dxp','color-grey-4');
-        @include mixin-color('dxp','color-white');
-      }
-      .navbar{
-        @include mixin-background-color('dxp','color-grey-4');
-        @include mixin-color('dxp','color-white');
-     
-      }
-
-    }
-    .light{
-     
-      p{
-      @include mixin-color('dxp','text-color-primary');
-     
-      }
-      label{
-      @include mixin-color('dxp','text-color-primary');
-     
-      }
-      h1{
-      @include mixin-color('dxp','text-color-primary');
-     
-      }
-      h2{
-      @include mixin-color('dxp','text-color-primary');
-     
-      }
-      h3{
-      @include mixin-color('dxp','text-color-primary');
-     
-      }
-      .login{
-      @include mixin-color('dxp','text-color-primary');
-     
-      }
-      .dashboard{
-      @include mixin-color('dxp','text-color-primary');
-     
-      }
-      span{
-        @include mixin-background-color('dxp','color-grey-3');
-      @include mixin-color('dxp','text-color-primary');
-      }
-      a{
-        @include mixin-background-color('dxp','color-grey-3');
-      @include mixin-color('dxp','text-color-primary');
-      }
-      .navbar{
-        @include mixin-background-color('dxp','color-grey-2');
-        @include mixin-color('dxp','text-color-primary');
-          }
-          .card{
-            @include mixin-background-color('vv','color-grey-3');
-    
-          }
-          .tile{
-            @include mixin-background-color('vv','color-grey-3');
-    
-          }
-          .box{
-            @include mixin-background-color('vv','color-grey-3');
-    
-          }
-    }
-    
-
-  }
+ 
   .vv{
     .dark{
-
+     
      progress{
-      @include mixin-color('vv','text-color-primary');
-      @include mixin-background-color('vv','text-color-primary');
+      @include primary-color('vv');
+      @include primary-background-color('vv');
      }
-      .app{
-        background: black!important;
-      }
+     .app{
+      @include mixin-background-color('vv','color-grey-4'); 
+  }
       p{
         @include mixin-color('vv','text-color-primary');
       }
       label{
-        @include mixin-color('vv','text-color-primary');
+        @include mixin-color('vv','color-grey-4');
       }
       h1{
         @include mixin-color('vv','text-color-primary');
@@ -170,21 +153,16 @@ body {
       h3{
         @include mixin-color('vv','text-color-primary');
       }
-      .card{
-        @include mixin-color('vv','text-color-primary');
-
-        }
-        .box{
-        @include mixin-color('vv','text-color-primary');
-
-          }
+      
       .login{
-        @include mixin-color('vv','text-color-primary');
-     
+        @include mixin-color('vv','color-white');
 
       }
       .dashboard{
+        
         @include mixin-color('vv','text-color-primary');
+        @include mixin-background-color('vv','color-grey-4');
+        padding-right:2em;
        
       }
       span{
@@ -201,51 +179,65 @@ body {
       }
       .title{
         @include mixin-color('vv','color-white');
-        @include mixin-color('vv','text-color-primary');
 
       }
       .subtitle{
-        @include mixin-color('vv','color-white');
         @include mixin-color('vv','text-color-primary');
+
+      }
+    
+      .card{
+        @include mixin-color('vv','text-color-primary');
+      }
+      .box{
+
+          }
+      .tile{
+        @include mixin-background-color('vv','color-grey-2');
+        @include mixin-color('vv','text-color-primary');
+        &.is-parent{
+          background-color: transparent;
+        }
+        .title{
+          @include mixin-color('vv','text-color-primary');
+        }
 
       }
       .navbar{
-        @include mixin-background-color('vv','color-primary');
+        @include primary-background-color('vv');
         @include mixin-color('vv','text-color-primary');
-        @include mixin-color('vv','color-white');
       }
       .side-menu{
-        @include mixin-background-color('vv','color-grey-4');
-        @include mixin-color('vv','text-color-primary');
-        @include mixin-color('vv','color-white');
+        background-color: $black;
+        color:$white;
       }
-      .card{
-        @include mixin-background-color('vv','color-grey-3');
-        @include mixin-color('vv','text-color-primary');
+      .list-view{
+        background-color: transparent;
+        border: none;
+        .listItem{
+          margin-right:2em!important;
 
+          .title{
+            @include mixin-color('vv','text-color-primary');
 
-      }
-      .tile{
-        @include mixin-background-color('vv','color-grey-3');
-        @include mixin-color('vv','text-color-primary');
+          }
+        
+        @include mixin-background-color('vv','color-grey-2');
 
-
-      }
-      .box{
-        @include mixin-background-color('vv','color-grey-3');
-        @include mixin-color('vv','text-color-primary');
-
+        }
       }
       
     }
     .light{
+      @include primary-color('vv');
+
       progress{
-        @include mixin-color('vv','text-color-primary');
-        @include mixin-background-color('vv','text-color-primary');
+        @include primary-background-color('vv');
+        @include primary-color('vv');
   
        }
       .app{
-        background: lightgrey!important;
+          @include mixin-background-color('vv','color-grey-1'); 
       }
       p{
         @include mixin-color('vv','text-color-primary');
@@ -262,12 +254,7 @@ body {
       h3{
         @include mixin-color('vv','text-color-primary');
       }
-      .login{
-        @include mixin-color('vv','text-color-primary');
-      }
-      .dashboard{
-        @include mixin-color('vv','text-color-primary');
-      }
+     
       span{
         @include mixin-color('vv','text-color-primary');
   
@@ -281,137 +268,68 @@ body {
       .subtitle{
         @include mixin-color('vv','text-color-secondary');
       }
-      .subtitle{
-        @include mixin-color('vv','text-color-secondary');
-      }
-      .navbar{
-        @include mixin-background-color('vv','color-primary');
-        @include mixin-color('vv','text-color-primary');
-      }
+     
+    
       .card{
-        @include mixin-color('vv','color-grey-2');
         @include mixin-color('vv','text-color-primary');
-
-
         }
+        .tile{
+          @include mixin-background-color('vv','color-white');
+          @include mixin-color('vv','text-color-primary');
+  &.is-parent{
+    background-color: transparent;
+  }
+          }
+          .box{
+            @include mixin-color('vv','text-color-primary');
+            @include mixin-background-color('vv','color-white');
+        
+  
+            }
+            article{
+              @include mixin-color('vv','text-color-primary');
+              @include mixin-background-color('vv','color-white');
+    
+            }
         small{
         @include mixin-color('vv','text-color-primary');
           
         }
         .box{
-          @include mixin-color('vv','color-grey-2');
           @include mixin-color('vv','text-color-primary');
 
           }
+        
           .side-menu{
-            @include mixin-background-color('vv','color-grey-3');
+            @include mixin-background-color('vv','color-white');
             @include mixin-color('vv','text-color-primary');
   
           }
-     
+          .login{
+            @include mixin-color('vv','text-color-primary');
+          }
+          .dashboard{
+            @include mixin-color('vv','text-color-primary');
+        @include mixin-background-color('vv','color-grey-1');
+        padding-right:2em;
+border: none;            
+          }
+          .navbar{
+            @include mixin-background-color('vv','color-primary');
+            @include mixin-color('vv','text-color-primary');
+          }
+          .list-view{
+            background-color: transparent;
+            border: none;
+            .listItem{
+              @include mixin-background-color('vv','color-white');
+              @include mixin-color('vv','text-color-primary');
+      
+                }
+          }
     }
 }
-.ncl{
-  .dark{
-    @include mixin-background-color('ncl','color-grey-4');
-    @include mixin-color('ncl','color-white');
-      p{
-        @include mixin-background-color('ncl','color-grey-4');
-        @include mixin-color('ncl','color-white'); 
-    }
-    label{
-      @include mixin-background-color('ncl','color-grey-4');
-      @include mixin-color('ncl','color-white'); 
-  }
-    h1{
-      @include mixin-background-color('ncl','color-grey-4');
-    @include mixin-color('ncl','color-white');
-    }
-    h2{
-      @include mixin-background-color('ncl','color-grey-4');
-      @include mixin-color('ncl','color-white');
-    }
-    h3{
-      @include mixin-background-color('ncl','color-grey-4');
-      @include mixin-color('ncl','color-white');
-    }
-    .login{
-      @include mixin-background-color('ncl','color-grey-4');
-      @include mixin-color('ncl','color-white');
-    }
-    .dashboard{
-      @include mixin-background-color('ncl','color-grey-4');
-      @include mixin-color('ncl','color-white');
-    }
-    span{
-      @include mixin-background-color('ncl','color-grey-4');
-      @include mixin-color('ncl','color-white');
-    
-    }
-    a{
-      @include mixin-background-color('ncl','color-grey-4');
-      @include mixin-color('ncl','color-white');
-    
-    }
-    .title{
-      @include mixin-background-color('ncl','color-grey-4');
-      @include mixin-color('ncl','color-white');
-    }
-    .navbar{
-      @include mixin-background-color('ncl','color-grey-4');
-      @include mixin-color('ncl','color-white');
-    }
-  }
-  .light{
-    @include mixin-background-color('ncl','color-grey-2');
-    @include mixin-color('ncl','text-color-primary');
-    p{
-      @include mixin-background-color('ncl','color-grey-2');
-    @include mixin-color('ncl','text-color-primary');
-    }
-    label{
-      @include mixin-background-color('ncl','color-grey-2');
-    @include mixin-color('ncl','text-color-primary');
-    }
-    h1{
-      @include mixin-background-color('ncl','color-grey-2');
-      @include mixin-color('ncl','text-color-primary');
-    }
-    h2{
-      @include mixin-background-color('ncl','color-grey-2');
-      @include mixin-color('ncl','text-color-primary');
-    }
-    h3{
-      @include mixin-background-color('ncl','color-grey-2');
-      @include mixin-color('ncl','text-color-primary');
-    }
-    .login{
-      @include mixin-background-color('ncl','color-grey-2');
-      @include mixin-color('ncl','text-color-primary');
-    }
-    .dashboard{
-      @include mixin-background-color('ncl','color-grey-2');
-      @include mixin-color('ncl','text-color-primary');
-    }
-    span{
-      @include mixin-background-color('ncl','color-grey-2');
-      @include mixin-color('ncl','text-color-primary');
-    }
-    a{
-      @include mixin-background-color('ncl','color-grey-2');
-      @include mixin-color('ncl','text-color-primary');
-    
-    }
-    .title{
-      @include mixin-background-color('ncl','color-grey-2');
-      @include mixin-color('ncl','text-color-primary');
-    }
-    .navbar{
-      @include mixin-background-color('ncl','color-grey-2');
-      @include mixin-color('ncl','text-color-primary');
-    }
-  }
-}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
