--- a/src/index.scss
+++ b/src/index.scss
@@ -7,10 +7,38 @@ body {
   sans-serif;
 
   }
+  input[type=range]:hover {
+    opacity: 1; /* Fully shown on mouse-over */
+  }
+  
+
+
+
+
+
+
+
+  input {
+  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+  background: transparent; /* Otherwise white in Chrome */
+  height: 2.3em;
+    &::-webkit-slider-runnable-track { @include track; }
+    &::-moz-range-track { @include track; }
+    &::-ms-track { @include track;}
+    &::-ms-thumb {@include thumb; margin-bottom:-6px;}
+    &::-webkit-slider-thumb{ @include thumb; }
+    &::-moz-range-thumb{ @include thumb; }
+    &:focus{ 
+      outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+    }
+  }
+
+
   .side-menu{
-    padding-left: 2em;
+    padding: 2em;
     height: 100%;
 }
+
 
 .switch{
 
@@ -60,61 +88,7 @@ body {
   }
   }
 
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none; /* Override default look */
-  appearance: none;
-  width: 2em; /* Set a specific slider handle width */
-  height:2em; /* Slider handle height */
-}
- 
-  .slider::-moz-range-thumb {
-    width: 2em; /* Set a specific slider handle width */
-    height: 2em; /* Slider handle height */
-    @include mixin-background-color('dxp','color-grey-2');
-    border-radius: 50%;
-    cursor: pointer; /* Cursor on hover */
-  }
- 
-  .slider:hover {
-    opacity: 1; /* Fully shown on mouse-over */
-  }
-  
 
-/*Apply styling that will override basic appearance*/
-/*nb this example is Chrome only*/
-input[type=range] {
-  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
-  background: transparent; /* Otherwise white in Chrome */
-}
-input[type=range]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-}
-input[type=range]:focus {
-  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
-}
-/*Styling the thumb in Chrome*/
-input[type=range]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  border: 1px solid #000000;
-  height: 2em;
-  width: 2em;
-  margin:-1em;
-  border-radius: 12px;
-  @include mixin-background-color('dxp','color-grey-4');
-  cursor: pointer;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; /* Add cool effects to your sliders! */
-}
-/*Styling the track in Chrome*/
-input[type=range]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: .2em;
-  cursor: pointer;
-  background:$black;
-
-}
-input[type=range]:focus::-webkit-slider-runnable-track {
-  background:rgb(34, 32, 32);
-}
 
 .tile {
   &.is-parent{
@@ -163,6 +137,7 @@ input[type=range]:focus::-webkit-slider-runnable-track {
         @include mixin-color('vv','text-color-primary');
         @include mixin-background-color('vv','color-grey-4');
         padding-right:2em;
+        border: none;            
        
       }
       span{
@@ -216,7 +191,6 @@ input[type=range]:focus::-webkit-slider-runnable-track {
         border: none;
         .listItem{
           margin-right:2em!important;
-
           .title{
             @include mixin-color('vv','text-color-primary');
 
@@ -232,10 +206,9 @@ input[type=range]:focus::-webkit-slider-runnable-track {
       @include primary-color('vv');
 
       progress{
-        @include primary-background-color('vv');
         @include primary-color('vv');
-  
        }
+      
       .app{
           @include mixin-background-color('vv','color-grey-1'); 
       }
@@ -309,10 +282,10 @@ input[type=range]:focus::-webkit-slider-runnable-track {
             @include mixin-color('vv','text-color-primary');
           }
           .dashboard{
-            @include mixin-color('vv','text-color-primary');
-        @include mixin-background-color('vv','color-grey-1');
-        padding-right:2em;
-border: none;            
+          @include mixin-color('vv','text-color-primary');
+          @include mixin-background-color('vv','color-grey-1');
+          padding-right:2em;
+          border: none;            
           }
           .navbar{
             @include mixin-background-color('vv','color-primary');
@@ -324,6 +297,7 @@ border: none;
             .listItem{
               @include mixin-background-color('vv','color-white');
               @include mixin-color('vv','text-color-primary');
+              padding:2em;
       
                 }
           }
