--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,13 @@ body {
 
   }
 
-
+textarea{
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+  padding:3px!important;
+  margin:2px;
+}
   .chat {
     width: 300px;
     border: solid 1px #EEE;
@@ -17,10 +23,18 @@ body {
     padding: 10px;
   }
   
+  .messenger{
+    .user-area{
+      background-color: whitesmoke!important;
+    }
+  }
   .messages {
     margin-top: 30px;
-    display: flex;
-    flex-direction: column;
+    .message-area{
+      max-height: 20em!important;
+      overflow: auto;
+    }
+   
   }
   
   .message {
