--- a/src/index.scss
+++ b/src/index.scss
@@ -10,10 +10,23 @@ body {
 
 textarea{
   width: 100%;
-  height: 100%;
-  border-radius: 6px;
-  padding:3px!important;
-  margin:2px;
+  min-height: 5em;
+  padding:8px!important;
+  background: rgb(253, 253, 253);
+}
+input[type=text]{
+  width: 100% !important;
+  height:3em !important;
+  padding: 10px;
+  display: inline-block;
+  background: rgb(253, 253, 253);
+}
+select{
+  width: 100% !important;
+  height:3em !important;
+  padding: 10px;
+  background: rgb(253, 253, 253);
+align-content: center;
 }
   .chat {
     width: 300px;
@@ -150,8 +163,6 @@ textarea{
 }
 
 .switch{
-
-
   input[type=checkbox]{
     height: 0;
     width: 0;
